entrega tercera final

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Pagina no oficial de Marilyn Manson donde encontraras galeria de imagenes, tours historicos, discografias y muchas cosas mas">
-	<meta name="keywords" content="Pagina no oficial de marilyn manson, marilyn manson, musica alternativa">
+	<meta name="keywords" content=" marilynmanson, musica, metal ,dark , gothic , alternativa">
 	<meta name="author" content="Sebastian Rubilar">
 	<meta name="copyright" content="Sebastian Rubilar">
 	<meta name="robots" content="index, nofollow">
@@ -16,69 +16,69 @@
 	</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
-<body class="contenedorgrid ">
+<body class="contenedor__grid ">
 	<nav id="nav" class="navbar navbar-expand-md">
-    <div class="container-fluid">
-     <!-- este es el boton mcdonald -->
-     <a  href="index.html"><img  src="img/mm.png"  alt= "logo de marilyn manson"> </a>
-     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul >
-        <li class="nav-item">
-          <a class="nav-link" aria-current="page" href="index.html">HOME</a>
-        </li>
-        <li class="nav-item ">
-          <a class="nav-link" href="discografia.html">DISCOGRAFIA</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="galeria.html">GALERIA</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="tour.html">TOUR</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contacto.html">CONTACTO</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+		<div class="container-fluid">
+			<!-- este es el boton mcdonald -->
+			<a  href="index.html"><img  src="img/mm.png"  alt= "logo de marilyn manson"> </a>
+			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarNav">
+				<ul >
+					<li class="nav-item">
+						<a class="nav-link" aria-current="page" href="index.html">HOME</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="pages/discografia.html">DISCOGRAFIA</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="pages/galeria.html">GALERIA</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="pages/tour.html">TOUR</a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="pages/contacto.html">CONTACTO</a>
+					</li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	<!-- <header id="header"> 
 		<img  src=" img/mae.gif" alt="imagen header marilyn manson">
 	</header> -->
-	<main id="main" class="flex" > 
-	<div class="text-center cajaa">  
-				<h1 >MARILYN MANSON FANSPAGE</h1>
-				
-			</div>
+	<main id="main" class="flex_index" > 
+		<div class="text-center caja__textomain animacion__tour ani_tour">  
+			<h1 >MARILYN MANSON FANSPAGE</h1>
+
+		</div>
 	</main>
-		<footer id="footer" class="contfo" >
-			<h5 >SITIOS OFICIALES</h5>
-			<article>
-				<a href="https://www.facebook.com/MarilynManson" target="_blank">
-					<img  src="img/f.png" alt="logo facebook marilyn manson">
-				</a>
-			</article>
-			<article>
-				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-					<img  src="img/in.png" alt="logo instagram marilyn manson">
-				</a>
-			</article>
-			<article>
-				<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-					<img  src="img/yu.png" alt="logo youtube marilyn manson">
-				</a>
-			</article>
-			<article  >
-				<a href="https://www.marilynmanson.com/" target="_blank">
-					<img  src="img/mm.png" alt="logo pagina oficial marilyn manson">
-				</a>
-			</article>
-			
-		</footer>
-	</div>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	<footer id="footer"  >
+		<h5 >SITIOS OFICIALES</h5>
+		<article>
+			<a href="https://www.facebook.com/MarilynManson" target="_blank">
+				<img  src="img/f.png" alt="logo facebook marilyn manson">
+			</a>
+		</article>
+		<article>
+			<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
+				<img  src="img/in.png" alt="logo instagram marilyn manson">
+			</a>
+		</article>
+		<article>
+			<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
+				<img  src="img/yu.png" alt="logo youtube marilyn manson">
+			</a>
+		</article>
+		<article  >
+			<a href="https://www.marilynmanson.com/" target="_blank">
+				<img  src="img/mm.png" alt="logo pagina oficial marilyn manson">
+			</a>
+		</article>
+
+	</footer>
+</div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
