--- a/pages/tour.html
+++ b/pages/tour.html
@@ -5,30 +5,30 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content=" tours historicos de marilyn manson con fechas y descripciones">
-	<meta name="keywords" content="tours marilyn manson, tour historicos, gira marilyn manson">
+	<meta name="keywords" content="tours, tour, marilyn, manson, historicos, historial, gira">
 	<meta name="author" content="Sebastian Rubilar">
 	<meta name="copyright" content="Sebastian Rubilar">
 	<meta name="robots" content="index, nofollow">
-	<link rel="shortcut  icon" href="img/nnn.ico">
+	<link rel="shortcut  icon" href="../img/nnn.ico">
 	<title>
 		Tours Marilyn Manson  FansPage 
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 
-<body class="contenedorgridtour ani body-back">
-	<nav id="nav" class="navbar navbar-expand-md j fx">
+<body class="contenedor__grid--tour">
+	<nav id="nav" class="navbar navbar-expand-md">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
-			<a  href="index.html"><img  src="img/mm.png" alt= "logo de marilyn manson"> </a>
+			<a  href="../index.html"><img  src="../img/mm.png" alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul >
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="index.html">HOME</a>
+						<a class="nav-link" aria-current="page" href="../index.html">HOME</a>
 					</li>
 					<li class="nav-item ">
 						<a class="nav-link" href="discografia.html">DISCOGRAFIA</a>
@@ -50,11 +50,11 @@
 
 	<!---FIN DEL NAVE--->
 	<header id="header" >
-		<img src=" img/w.jpg" alt="marilyn manson foto" 	> 
+		<img src="../img/w.jpg" alt="marilyn manson foto " 	> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-	<main  class="flex2" id="main">
+	<main id="main" class="flex">
 		<h1 class="text-center m-2">HISTORIAL DE TOURS</h1> 
-		<table class="m-5 table-bordered animaciontour ani_tour">
+		<table class="m-5 table-bordered animacion__tour ani_tour">
 			<thead>
 				<tr>
 					<th scope="col">AÑO</th>
@@ -84,50 +84,50 @@
 					<td>Disco en promoción: Holy Wood (In the Shadow of the Valley of Death)
 						Fecha de inicio: 27 de octubre de 2000
 					Fecha final: 2 de septiembre de 2001</td>
-				<tr>
-					<th scope="row">2003</th>
-					<td >Grotesk Burlesk Tour</td>
-					<td>Disco en promoción: The Golden Age of Grotesque
-						Fecha de inicio: 11 de abril de 2003
-					Fecha final: 27 de diciembre de 2003</td>
-				</tr>
-				<tr>
-					<th scope="row">2004-2005</th>
-					<td >Against All Gods Tour</td>
-					<td>Disco en promoción: Lest We Forget: The Best Of 
-						Fecha de inicio: 27 de octubre de 2004
-					Fecha final: 31 de agosto de 2005</td>	
-				</tr>
-			</tbody>
-		</table>
-		<img class="contenedorimg" src="img/svg.png">
-	</main>
-	<footer id="footer" >
-		<h5 >SITIOS OFICIALES</h5>
-		<article>
-			<a href="https://www.facebook.com/MarilynManson" target="_blank">
-				<img src="img/f.png"  alt="logo facebook marilyn manson">
-			</a>
-		</article>
-		<article>
-			<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-				<img src="img/in.png" alt="logo instagram marilyn manson">
-			
-			</a>
-		</article>
-		<article>
-			<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-				<img src="img/yu.png"  alt="logo youtube marilyn manson">
-			</a>
-		</article>
-		<article>
-			<a href="https://www.marilynmanson.com/" target="_blank">
-				<img  src="img/mm.png" alt="logo pagina oficial marilyn manson">
-			</a>
-		</article>
+					<tr>
+						<th scope="row">2003</th>
+						<td >Grotesk Burlesk Tour</td>
+						<td>Disco en promoción: The Golden Age of Grotesque
+							Fecha de inicio: 11 de abril de 2003
+						Fecha final: 27 de diciembre de 2003</td>
+					</tr>
+					<tr>
+						<th scope="row">2004-2005</th>
+						<td >Against All Gods Tour</td>
+						<td>Disco en promoción: Lest We Forget: The Best Of 
+							Fecha de inicio: 27 de octubre de 2004
+						Fecha final: 31 de agosto de 2005</td>	
+					</tr>
+				</tbody>
+			</table>
+			<img class="contenedor__img--tour" src="../img/svg.png">
+		</main>
+		<footer id="footer" >
+			<h5 >SITIOS OFICIALES</h5>
+			<article>
+				<a href="https://www.facebook.com/MarilynManson" target="_blank">
+					<img src="../img/f.png"  alt="logo facebook marilyn manson">
+				</a>
+			</article>
+			<article>
+				<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
+					<img src="../img/in.png" alt="logo instagram marilyn manson">
+					
+				</a>
+			</article>
+			<article>
+				<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
+					<img src="../img/yu.png"  alt="logo youtube marilyn manson">
+				</a>
+			</article>
+			<article>
+				<a href="https://www.marilynmanson.com/" target="_blank">
+					<img  src="../img/mm.png" alt="logo pagina oficial marilyn manson">
+				</a>
+			</article>
 
-	</footer>
-	<!-- JavaScript Bundle with Popper -->
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-</body>
-</html>
+		</footer>
+		<!-- JavaScript Bundle with Popper -->
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+	</body>
+	</html>
