--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Seccion de contactos con desarrolladores de fanspage de Marilyn Manson">
-	<meta name="keywords" content="contacto marilyn manson, ultimas noticias, marilyn manson">
+	<meta name="keywords" content="contacto, marilyn, manson, ultimas, noticias, marilyn, desarrollador,formulario">
 	<meta name="author" content="Sebastian Rubilar">
 	<meta name="copyright" content="Sebastian Rubilar">
 	<meta name="robots" content="index, nofollow">
@@ -14,22 +14,22 @@
 		Contacto Marilyn Manson FansPage
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="../css/style.css">
 
 </head>
 
-<body class="contenedorgridcont ani body-back">
+<body class="contenedor__grid--contactos">
 	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid j">
 			<!-- este es el boton mcdonald -->
-			<a  href="index.html"><img  src="img/mm.png" alt= "logo de marilyn manson"> </a>
+			<a  href="../index.html"><img  src="../img/mm.png" alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
 			<div class="collapse navbar-collapse" id="navbarNav">
 				<ul >
 					<li class="nav-item">
-						<a class="nav-link" aria-current="page" href="index.html">HOME</a>
+						<a class="nav-link" aria-current="page" href="../index.html">HOME</a>
 					</li>
 					<li class="nav-item ">
 						<a class="nav-link" href="discografia.html">DISCOGRAFIA</a>
@@ -51,7 +51,7 @@
 
 
 	<header  id="header" > 
-		<img src="img/ggg.jpg" alt="imagen header marilyn manson"	>	
+		<img src="../img/ggg.jpg" alt="imagen header marilyn manson"	>	
 	</header>
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
@@ -96,22 +96,22 @@
 						<h5 >SITIOS OFICIALES</h5>
 						<article>
 							<a href="https://www.facebook.com/MarilynManson" target="_blank">
-								<img  src="img/f.png"  alt="logo facebook marilyn manson">
+								<img  src="../img/f.png"  alt="logo facebook marilyn manson">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.instagram.com/marilynmanson/?hl=es" target="_blank">
-								<img  src="img/in.png" alt="logo instagram marilyn manson">
+								<img  src="../img/in.png" alt="logo instagram marilyn manson">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.youtube.com/channel/UCbirjI1K3MGu0-Y1gTBNR5w" target="_blank">
-								<img  src="img/yu.png" alt="logo youtube marilyn manson">
+								<img  src="../img/yu.png" alt="logo youtube marilyn manson">
 							</a>
 						</article>
 						<article>
 							<a href="https://www.marilynmanson.com/" target="_blank">
-								<img   src="img/mm.png" alt="logo pagina oficial marilyn manson">
+								<img   src="../img/mm.png" alt="logo pagina oficial marilyn manson">
 							</a>
 						</article>
 
