--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -49,7 +49,7 @@
  <img  src="../img/hh.jpg" alt="marilyn manson foto header">	
 </header>
 <main  id="main">
-  
+
   <div >
     <div id="carouselExampleControls" class="carousel slide borde__blanco animacion__tour ani_tour" data-bs-ride="carousel">
       <h1 class="text-center">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
@@ -59,47 +59,47 @@
           <img src="../img/galmm/z.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 1">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/x.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 2">
+          <img src="../img/galmm/x.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 2">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/c.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 3">
+          <img src="../img/galmm/c.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 3">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/d.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 4">
+          <img src="../img/galmm/d.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 4">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/e.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 5">
+          <img src="../img/galmm/e.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 5">
         </div>
         
         <div class="carousel-item">
           <img src="../img/galmm/h.png" class="d-block w-100" alt="imagen de marilyn manson en carrusel 6">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/i.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 7">
+          <img src="../img/galmm/i.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 7">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/j.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 8">
+          <img src="../img/galmm/j.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 8">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/k.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 9">
+          <img src="../img/galmm/k.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 9">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/l.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 10">
+          <img src="../img/galmm/l.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 10">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/m.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 11">
+          <img src="../img/galmm/m.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 11">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/n.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 12">
+          <img src="../img/galmm/n.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 12">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/o.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 13">
+          <img src="../img/galmm/o.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 13">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/p.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 14">
+          <img src="../img/galmm/p.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 14">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/s.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 16">
+          <img src="../img/galmm/s.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 16">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
