subida para entrega de trabajo

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Pagina no oficial de Marilyn Manson donde encontraras galeria de imagenes, tours historicos, discografias y muchas cosas mas">
-	<meta name="keywords" content=" marilynmanson, musica, metal ,dark , gothic , alternativa">
+	<meta name="keywords" content=" marilyn,manson, musica, metal ,dark , gothic , alternativa">
 	<meta name="author" content="Sebastian Rubilar">
 	<meta name="copyright" content="Sebastian Rubilar">
 	<meta name="robots" content="index, nofollow">
