--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -47,7 +47,7 @@
 		</div>
 	</nav>
 	<header id="header" > 
-		<img src=" ../img/pesa.jpg" alt="mariylyn manson foto">	
+		<img src=" ../img/s.jpg" alt="mariylyn manson foto">	
 	</header>
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main" class="mt-3">
