arreglada de texto en index

--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -16,7 +16,6 @@
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
-
 <body class="contenedor__grid--disco">	
 	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid">
@@ -47,7 +46,7 @@
 		</div>
 	</nav>
 	<header id="header" > 
-		<img src=" ../img/s.jpg" alt="mariylyn manson foto">	
+		<img src="../img/S.jpg" alt="mariylyn manson foto">	
 	</header>
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main" class="mt-3">
