--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -20,7 +20,7 @@
 	<nav id="nav" class="navbar navbar-expand-md">
     <div class="container-fluid">
      <!-- este es el boton mcdonald -->
-     <a href="../index.html"><img  src="../img/mm.png" alt= "logo de marilyn manson"> </a>
+     <a href="../index.html"><img  src="../img/mm.png" class="pb-3" alt= "logo de marilyn manson"> </a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
