arreglo de logo

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,7 +9,7 @@
 	<meta name="author" content="Sebastian Rubilar">
 	<meta name="copyright" content="Sebastian Rubilar">
 	<meta name="robots" content="index, nofollow">
-	<link rel="shortcut  icon" href="img/nnn.ico">
+	<link rel="shortcut  icon" href="../img/nnn.ico">
 	<title>
 		Contacto Marilyn Manson FansPage
 	</title>
