--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<img  src=" img/mae.gif" alt="imagen header marilyn manson">
 	</header> -->
 	<main id="main" class="flex_index" > 
-		<div class="text-center caja__textomain animacion__tour ani_tour">  
+		<div class="text-center caja__textomain ">  
 			<h1 >MARILYN MANSON FANSPAGE</h1>
 
 		</div>
