arreglo de paginas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<nav id="nav" class="navbar navbar-expand-md">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
-			<a  href="index.html"><img class="pb-2" src="img/mm.png"  alt= "logo de marilyn manson"> </a>
+			<a  href="index.html"><img class="" src="img/new_logo.png"  alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -45,14 +45,11 @@
 			</div>
 		</div>
 	</nav>
-	<!-- <header id="header"> 
-		<img  src=" img/mae.gif" alt="imagen header marilyn manson">
-	</header> -->
 	<main id="main" class="flex_index" > 
 		<div class="text-center caja__textomain ">  
 			<h1 >MARILYN MANSON FANSPAGE</h1>
-
-		</div>
+				</div>
+	
 	</main>
 	<footer id="footer"  >
 		<h5 >SITIOS OFICIALES</h5>
