--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -15,12 +15,14 @@
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
+		<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
 </head>
 <body class="contenedor__grid--disco">	
 	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid">
 			<!-- este es el boton mcdonald -->
-			<a href="../index.html"><img  src="../img/mm.png" class="pb-2" alt= "logo de marilyn manson"> </a>
+			<a href="../index.html"><img  src="../img/new_logo.png" class="pb-2" alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -45,7 +47,8 @@
 			</div>
 		</div>
 	</nav>
-	<header id="header" > 
+	<header data-aos="fade-up"
+     data-aos-duration="3000" id="header" > 
 		<img src="../img/S.jpg" alt="mariylyn manson foto">	
 	</header>
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
@@ -53,28 +56,28 @@
 		<h1 class="text-center">DISCOGRAFIA DE MARILYN MANSON</h1>
 		<div class="flex__disco">   
 			<div >
-				<article >
+				<article data-aos="zoom-in">
 					<h4> A Potrait American Family - 1994 </h4>
 					<img src="../img/discos/portrait.jpg" alt="imagen del album portrait american family">
 				</article>
 				<a class=" boton-escuchar" href="https://www.youtube.com/watch?v=4jYpcJBouVE" role="button" target="_blank">Escuchar en youtube</a>
 			</div>
 			<div >
-				<article >
+				<article data-aos="zoom-in">
 					<h4 >Antichrist Superstar - 1996</h4>
 					<img src="../img/discos/super.jpg" alt="imagen del album 	antichrist superstar">
 				</article>
 				<a class=" boton-escuchar " href="https://www.youtube.com/watch?v=uW94OQzDAMg" role="button " target="_blank">Escuchar en youtube</a>
 			</div >
 			<div >
-				<article >
+				<article data-aos="zoom-in">
 					<h4 >Mechanical Animals - 1998</h4>
 					<img src="../img/discos/mechanical.jpg" alt="imagen del album 	mechanical animals">
 				</article>
 				<a class=" boton-escuchar" href="https://www.youtube.com/watch?v=6Fn7gd08hAE&list=PLBzBwYhHpqLL9QFeI2Q7FT7dQoTsI2hcl" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
 			<div >
-				<article >
+				<article data-aos="zoom-in">
 					<h4 >The Last Tour On Earth - 1999</h4>
 
 					<img src="../img/discos/thelast.jpg" alt="imagen del album the last tour on earth">
@@ -82,7 +85,7 @@
 				<a class=" boton-escuchar" href="https://www.youtube.com/watch?v=YERLixP10Ho&list=PLuIgBDZwi9eXHCbN4hf2zAq_Np_cO-1Kl" target="_blank" role="button">Escuchar en youtube</a>
 			</div>
 			<div >
-				<article>
+				<article data-aos="zoom-in">
 					<h4 >Holy Wood (In The Shadow Of The Valley Of Death) - 2000</h4>
 					<img src="../img/discos/holly.jpg" alt="imagen del album Holy Wood (In The Shadow Of The Valley Of Death)">
 				</a>	
@@ -90,7 +93,7 @@
 			<a class=" boton-escuchar" href="https://www.youtube.com/watch?v=oM81q5WlDlc&list=PL6ogdCG3tAWgFvMVkAhZISG5g0vn-8lfr" target="_blank" role="button">Escuchar en youtube</a>
 		</div>
 		<div >
-			<article >
+			<article data-aos="zoom-in">
 				<h4>The Golden Age Of Grotesque- 2003</h4>	
 				<img src="../img/discos/thegolden.jpg" alt="imagen del album The Golden Age Of Grotesque 2003">
 			</a>	
@@ -98,7 +101,7 @@
 		<a class=" boton-escuchar" href="https://www.youtube.com/watch?v=WGUzKMxb3NU" target="_blank" role="button">Escuchar en youtube</a>
 	</div>
 	<div >
-		<article >
+		<article data-aos="zoom-in">
 			<h4 >Lest We Forget The Best Of MM- 2004</h4>	
 
 			<img src="../img/discos/thebest.jpg" alt="imagen del album The Golden Age Of Grotesque 2003">
@@ -107,14 +110,14 @@
 		<a class=" boton-escuchar" href="https://www.youtube.com/watch?v=v6UkQqrkfuU&list=PLPhQKb2xhZJ_WXp_uf_VgpXz5hiIyIUvr" target="_blank"  role="button">Escuchar en youtube</a>
 	</div>
 	<div>
-		<article>
+		<article data-aos="zoom-in">
 			<h4 >Eat Me, Drink Me - 2007</h4>
 			<img src="../img/discos/eatmedrinkme.jpg" alt="imagen del album Eat Me, Drink Me 2007">
 		</article>
 		<a class=" boton-escuchar"  href="https://www.youtube.com/watch?v=q6BKiIcUq_s&list=PL5OU5WvFqBTiB3oUb-RxASnQ0G34aC7sF" target="_blank"  role="button">Escuchar en youtube</a>
 	</div>
 	<div >
-		<article >
+		<article data-aos="zoom-in">
 			<h4>The High End Of Low - 2009</h4>	
 			<img src="../img/discos/high.jpg" alt="imagen del album The High End Of Low 2009">
 			
@@ -124,7 +127,7 @@
 	<div > 
 		
 		
-		<article >
+		<article data-aos="zoom-in">
 			<h4 >Born Villain - 2012</h4>
 			<img src="../img/discos/born.jpg" alt="imagen del album Born Villain">
 		</article>
@@ -132,7 +135,7 @@
 	</div>
 	<div >
 
-		<article >
+		<article data-aos="zoom-in">
 			<h4 >The Pale Emperor - 2014</h4>	
 			<img src="../img/discos/pale.jpg" alt="imagen del album The Pale Emperor ">
 			
@@ -140,18 +143,18 @@
 		<a class=" boton-escuchar"  href="https://www.youtube.com/watch?v=sezJKs8xmOU" target="_blank" role="button">Escuchar en youtube</a>
 	</div>
 	<div >
-		<article >
+		<article data-aos="zoom-in">
 			<h4>Heaven Upside Down - 2017</h4>	
 			<img src="../img/discos/heaven.jpg" alt="imagen del album Heaven Upside Down">
 		</article>
 		<a class=" boton-escuchar"  href="https://www.youtube.com/watch?v=LKbECUrFM8I&list=PL6ogdCG3tAWg2XpnMOh5mKO5hcSNZIKD6" target="_blank" target="_blank" role="button">Escuchar en youtube</a>
 	</div>
 	<div class=" p-3"> 
-		<article >
+		<article data-aos="zoom-in">
 			<h4 >We Are Chaos - 2020</h4>
 			<img  src="../img/discos/chaos.jpg" alt="imagen del album We Are Chaos 2020">
 		</article>
-		<a class=" boton-escuchar"  href="https://www.youtube.com/watch?v=KDpuz6q4FBg&list=PLxA687tYuMWgeaiSNrfp070AxxZVhBaOV" target="_blank" target="_blank" target="_blank" role="button">Escuchar en youtube</a>
+		<a class=" boton-escuchar"  href="https://www.youtube.com/watch?v=KDpuz6q4FBg&list=PLxA687tYuMWgeaiSNrfp070AxxZVhBaOV" target="_blank" role="button">Escuchar en youtube</a>
 	</div>
 </div>
 </main> 
@@ -181,5 +184,9 @@
 </footer>
 <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 </body>
 </html>
