--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,14 +15,14 @@
 	</title>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="../css/style.css">
-
+	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body class="contenedor__grid--contactos">
 	<nav id="nav" class="navbar navbar-expand-md ">
 		<div class="container-fluid j">
 			<!-- este es el boton mcdonald -->
-			<a  href="../index.html"><img  src="../img/mm.png" class="pb-2" alt= "logo de marilyn manson"> </a>
+			<a  href="../index.html"><img  src="../img/new_logo.png" class="pb-2" alt= "logo de marilyn manson"> </a>
 			<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
@@ -50,13 +50,15 @@
 
 
 
-	<header  id="header" > 
-		<img src="../img/ggg.jpg" alt="imagen header marilyn manson"	>	
+	<header data-aos="fade-up"
+     data-aos-duration="500" id="header" > 
+		<img class="w-80" src="../img/2323.png" alt="imagen header marilyn manson"	>	
 	</header>
 
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main"  >
-		<div class="flex ani pt-4">
+
+		<div data-aos="fade-right" class="flex ani pt-4">
 			<form  id="form" action="error404.html" class="contenedor_contactos-fondo">
 				<h1  class=" m-2 text-center">CONTACTOS Y SUGERENCIAS: 
 				</h1>
@@ -87,9 +89,14 @@
 							<input  class=" boton__cancelar" type="reset"  class="m-3"   value="Cancelar">
 							<input class=" boton__enviar"  type="submit"  name="Enviar">
 						</div>
-					</div>
-					</main>
 
+					</div>
+
+					</main>
+					<aside data-aos="fade-left" id="aside">
+					<div >
+					<img class="w-100" src="../img/jesus.jpg">
+					</div></aside>
 
 					<footer id="footer" >
 						<h5 >SITIOS OFICIALES</h5>
@@ -117,6 +124,10 @@
 					</footer>
 					<!-- JavaScript Bundle with Popper -->
 					<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+					<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<script>
+  AOS.init();
+</script>
 				</body>
 
 				</html>
