--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -20,7 +20,7 @@
 	<nav id="nav" class="navbar navbar-expand-md">
     <div class="container-fluid">
      <!-- este es el boton mcdonald -->
-     <a href="../index.html"><img  src="../img/mm.png" class="pb-2" alt= "logo de marilyn manson"> </a>
+     <a href="../index.html"><img  src="../img/new_logo.png" class="pb-2" alt= "logo de marilyn manson"> </a>
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -53,7 +53,6 @@
   <div >
     <div id="carouselExampleControls" class="carousel slide borde__blanco animacion__tour ani_tour" data-bs-ride="carousel">
       <h1 class="text-center">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
-      <h3 class="m-3">Desplaza las imagenes con los controles de los bordes o dezplaza con el dedo</h3>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="../img/galmm/z.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 1">
@@ -76,9 +75,6 @@
         </div>
         <div class="carousel-item">
           <img src="../img/galmm/i.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 7">
-        </div>
-        <div class="carousel-item">
-          <img src="../img/galmm/j.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 8">
         </div>
         <div class="carousel-item">
           <img src="../img/galmm/k.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 9">
@@ -112,7 +108,13 @@
       </button>
       
     </div>
-    
+    <div>
+    <h2 class="text-center">MIRA LAS ULTIMAS IMAGENES Y ENTERATE DE TODO EN SUS REDES SOCIALES!</h2>
+    <div class="flex pb-4 m-4 borde__blanco"> 
+            <iframe width="360" height="300" src="https://www.instagram.com/p/CG89qraAVjb/embed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+          <a class="twitter-timeline" data-lang="es" data-width="360" data-height="300" data-theme="dark" href="https://twitter.com/marilynmanson?ref_src=twsrc%5Etfw">Tweets by marilynmanson</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+          </div>
+    </div>
   </div>
 </main>
 <footer id="footer">
