arreglo de sobrante de pantalla tour

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -50,15 +50,13 @@
 
 
 
-	<header data-aos="fade-up"
-     data-aos-duration="500" id="header" > 
-		<img class="w-80" src="../img/2323.png" alt="imagen header marilyn manson"	>	
+	<header id="header" data-aos="zoom-in-up" > 
+		<img class="w-70" src="../img/2323.png" alt="imagen header marilyn manson"	>	
 	</header>
-
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
-	<main id="main"  >
+	<main id="main" class="flex" >
 
-		<div data-aos="fade-right" class="flex ani pt-4">
+		<div class="flex" data-aos="zoom-in-up">
 			<form  id="form" action="error404.html" class="contenedor_contactos-fondo">
 				<h1  class=" m-2 text-center">CONTACTOS Y SUGERENCIAS: 
 				</h1>
@@ -93,9 +91,9 @@
 					</div>
 
 					</main>
-					<aside data-aos="fade-left" id="aside">
-					<div >
-					<img class="w-100" src="../img/jesus.jpg">
+					<aside class="flex" id="aside">
+					<div  data-aos="zoom-in-up">
+					<img  class="w-99" src="../img/jesus.jpg">
 					</div></aside>
 
 					<footer id="footer" >
