arrelgo de borde

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -93,7 +93,7 @@
 					</main>
 					<aside class="flex" id="aside">
 					<div  data-aos="zoom-in-up">
-					<img  class="w-99" src="../img/jesus.jpg">
+					<img  class="w-99" src="../img/3.png">
 					</div></aside>
 
 					<footer id="footer" >
