--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -110,10 +110,10 @@
       
     </div>
     <div>
-    <h2 class="text-center">MIRA LAS ULTIMAS IMAGENES Y ENTERATE DE TODO EN SUS REDES SOCIALES!</h2>
+    <h2 class="text-center">MIRA MAS IMAGENES EN INSTAGRAM!</h2>
     <div  data-aos="zoom-in-up" class="flex pb-4 m-4 borde__blanco"> 
-            <iframe width="360" height="300" src="https://www.instagram.com/p/CG89qraAVjb/embed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-          <a class="twitter-timeline" data-lang="es" data-width="360" data-height="300" data-theme="dark" href="https://twitter.com/marilynmanson?ref_src=twsrc%5Etfw">Tweets by marilynmanson</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <iframe width="360" height="360" src="https://www.instagram.com/p/CG89qraAVjb/embed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
+         
           </div>
     </div>
   </div>
