arreglo pagina indesx

--- a/index.html
+++ b/index.html
@@ -45,10 +45,11 @@
 			</div>
 		</div>
 	</nav>
+	<header> </header>
 	<main id="main" class="flex_index" > 
-		<div class="text-center caja__textomain ">  
-			<h1 >MARILYN MANSON FANSPAGE</h1>
-				</div>
+		<!-- <div class="text-center caja__textomain ">  
+			<h1 >MARILYN MANSON</h1>
+				</div> -->
 	
 	</main>
 	<footer id="footer"  >
