--- a/pages/error404.html
+++ b/pages/error404.html
@@ -24,7 +24,8 @@
 			<img class="astro rebote" src="../img/pagina_404/astro.png">
 			<img class="nave" src="../img/pagina_404/nave.png">
 			<div class="text-center error4">
-				<h2 class="texto404">ERROR 404 <br>-page no found-  </h2>
+				<h2 class="texto404">ERROR 404  </h2>
+				<h3>-page no found- </h3>
 				<a class="btn boton-404 m-3" href="../index.html" role="button" >VOLVER A LA PAGINA PRINCIPAL</a>
 			</div>
 		</main>
