--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 			</div>
 		</div>
 	</nav>
-	<header> 
-	<div style="position:relative;padding-bottom:56.25%;height:0;overflow:hidden;"> <iframe style="width:100%;height:100%;position:absolute;left:0px;top:0px;overflow:hidden" frameborder="0" type="text/html" src="https://www.dailymotion.com/embed/video/x362z39?autoplay=1" width="100%" height="100%" allowfullscreen allow="autoplay"> </iframe> </div> 
+	<header class="video-contenedor"> 
+<iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/VdV1Zc_PFdg?autoplay=1&mute=1&enablejsapi=1" title="YouTube video player" frameborder="0" allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</header>
-	<main id="main" class=" flex_index contenedor_contactos-fondo" data-aos="zoom-in-up">
+	<main id="main" class=" flex_index" data-aos="zoom-in-up">
 	
 	<div class="contenedor_index-fondo flex_index">
 		<h1 class="text-center">MARILYN MANSON</h1>
