--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,7 +51,7 @@
 
 
 	<header id="header" data-aos="zoom-in-up" > 
-		<img class="w-70" src="../img/2323.png" alt="imagen header marilyn manson"	>	
+		<img class="w-70" src="../img/2323.png" alt="imagen header marilyn manson de contactos"	>	
 	</header>
 	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main id="main" class="flex" >
@@ -90,10 +90,10 @@
 
 					</div>
 
-					</main>
-					<aside class="flex" id="aside">
+				</main>
+				<aside class="flex" id="aside">
 					<div  data-aos="zoom-in-up">
-					<img  class="w-99" src="../img/3.png">
+						<img  class="w-99" src="../img/3.png" alt="imagen de marilyn manson con ojos pintados de azul">
 					</div></aside>
 
 					<footer id="footer" >
@@ -123,9 +123,9 @@
 					<!-- JavaScript Bundle with Popper -->
 					<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 					<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+					<script>
+						AOS.init();
+					</script>
 				</body>
 
 				</html>
