--- a/pages/error404.html
+++ b/pages/error404.html
@@ -20,14 +20,15 @@
 <body class="ani contenedor">
 	<main >
 		<div class="flex text-center">
-			<img  class="luna" src="../img/pagina_404/404.png">
-			<img class="astro rebote" src="../img/pagina_404/astro.png">
-			<img class="nave" src="../img/pagina_404/nave.png">
+			<img  class="luna" src="../img/pagina_404/404.png" alt="imagen de la luna llena">
+			<img class="astro rebote" src="../img/pagina_404/astro.png" alt="imagen de un astronatuta">
+			<img class="nave" src="../img/pagina_404/nave.png" alt="imagen de ovni">
 			<div class="text-center error4">
-				<h2 class="texto404">ERROR 404  </h2>
+				<h2 class="texto404">ERROR 404 </h2>
+					<a class="btn boton-404 m-3" href="../index.html" role="button" >VOLVER A LA PAGINA PRINCIPAL</a>
 				<h3>-page no found- </h3>
-				<a class="btn boton-404 m-3" href="../index.html" role="button" >VOLVER A LA PAGINA PRINCIPAL</a>
 			</div>
+		</div>
 		</main>
 	</body>
 	</html>
