--- a/pages/error404.html
+++ b/pages/error404.html
@@ -17,18 +17,13 @@
 	
 </head>
 
-<body class="ani contenedor">
-	<main >
-		<div class="flex text-center">
-			<img  class="luna" src="../img/pagina_404/404.png" alt="imagen de la luna llena">
-			<img class="astro rebote" src="../img/pagina_404/astro.png" alt="imagen de un astronatuta">
-			<img class="nave" src="../img/pagina_404/nave.png" alt="imagen de ovni">
-			<div class="text-center error4">
-				<h2 class="texto404">ERROR 404 </h2>
+<body class="body404">
+	<main class="container404">
+	
+				<h2 >ERROR </h2>
+				<h1>404</h1>
+				<p>lo sentimos no podemos encontrar la pagina</p>
 					<a class="btn boton-404 m-3" href="../index.html" role="button" >VOLVER A LA PAGINA PRINCIPAL</a>
-				<h3>-page no found- </h3>
-			</div>
-		</div>
 		</main>
 	</body>
 	</html>
