--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -58,7 +58,7 @@
 
 		<div class="flex" data-aos="zoom-in-up">
 			<form  id="form" action="error404.html" class="contenedor_contactos-fondo">
-				<h1  class=" m-2 text-center">CONTACTOS Y SUGERENCIAS: 
+				<h1  class=" m-2 text-center">CONTACTO: 
 				</h1>
 				<label for="">Nombre:</label>
 				<input type="text"  id="nombre" placeholder="Ingrese su nombre"required>
