--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -53,7 +53,7 @@
 </header>
 <!-- FIN DEL HEADER (UNA IMAGEN)---->
 <main id="main" class="mt-3">
-	<h1 class="text-center">DISCOGRAFIA DE MARILYN MANSON</h1>
+	<h1 class="text-center">DISCOGRAFIA</h1>
 	<div class="flex__disco">   
 		<div >
 			<article data-aos="zoom-in">
