--- a/pages/error404.html
+++ b/pages/error404.html
@@ -21,7 +21,7 @@
 	<main class="container404">
 	
 				<h2 >ERROR </h2>
-				<h1>404</h1>
+				<h1 id="cuatro">404</h1>
 				<p>lo sentimos no podemos encontrar la pagina</p>
 					<a class="btn boton-404 m-3" href="../index.html" role="button" >VOLVER A LA PAGINA PRINCIPAL</a>
 		</main>
