--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -53,7 +53,7 @@
 
   <div >
     <div id="carouselExampleControls" class="carousel slide borde__blanco animacion__tour ani_tour" data-bs-ride="carousel">
-      <h1 class="text-center">GALERIA DE IMAGENES DE MARILYN MANSON</h1>
+      <h1 class="text-center">GALERIA </h1>
       <div class="carousel-inner">
         <div class="carousel-item active">
           <img src="../img/galmm/z.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 1">
@@ -113,7 +113,7 @@
       <h2 class="text-center">MIRA MAS IMAGENES EN INSTAGRAM!</h2>
       <div  data-aos="zoom-in-up" class="flex pb-4 m-4 borde__blanco"> 
         <iframe width="360" height="360" src="https://www.instagram.com/p/CG89qraAVjb/embed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> 
-        
+
       </div>
     </div>
   </div>
