--- a/pages/tour.html
+++ b/pages/tour.html
@@ -54,7 +54,7 @@
 		<img src="../img/ww.png" alt="marilyn manson foto con una mascara" 	> 
 	</header>	<!-- FIN DEL HEADER (UNA IMAGEN)---->
 	<main data-aos="zoom-in-up" id="main" class="flex">
-		<h1 class="text-center">HISTORIAL DE TOURS</h1> 
+		<h1 class="text-center">TOURS</h1> 
 		<div class="cont__tour">
 			<table class="m-5 ">
 				<tbody>
