una de las ultimas comiteadas

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -53,7 +53,7 @@
 	<header id="header" data-aos="zoom-in-up" > 
 		<img class="w-70" src="../img/2323.png" alt="imagen header marilyn manson de contactos"	>	
 	</header>
-	<!-- FIN DEL HEADER (UNA IMAGEN)---->
+	<!-- FIN DEL HEADER --->
 	<main id="main" class="flex" >
 
 		<div class="flex" data-aos="zoom-in-up">
