--- a/pages/error404.html
+++ b/pages/error404.html
@@ -1,29 +1,36 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Pagina de error 404 de pagina marilyn manson fanspage">
-	<meta name="keywords" content="Pagina, marilyn, manson, musica, alternativa, error, error404, 404">
-	<meta name="author" content="Sebastian Rubilar">
-	<meta name="copyright" content="Sebastian Rubilar">
-	<meta name="robots" content="index, nofollow">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="shortcut  icon" href="../img/nnn.ico">
-	<title>
-		M M Fanspage Error 404
-	</title>
-	<link rel="stylesheet" type="text/css" href="../css/style.css">
-	
-</head>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Pagina de error 404 de pagina marilyn manson fanspage"
+    />
+    <meta
+      name="keywords"
+      content="Pagina, marilyn, manson, musica, alternativa, error, error404, 404"
+    />
+    <meta name="author" content="Sebastian Rubilar" />
+    <meta name="copyright" content="Sebastian Rubilar" />
+    <meta name="robots" content="index, nofollow" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <link rel="shortcut  icon" href="../img/nnn.ico" />
+    <title>M M Fanspage Error 404</title>
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
+  </head>
 
-<body class="body404">
-	<main class="container404">
-	
-				<h2 >ERROR </h2>
-				<h1 id="cuatro">404</h1>
-				<p>lo sentimos no podemos encontrar la pagina</p>
-					<a class="btn boton-404 m-3" href="../index.html" role="button" >VOLVER A LA PAGINA PRINCIPAL</a>
-		</main>
-	</body>
-	</html>
+  <body class="body404">
+    <main class="container404">
+      <h2>ERROR</h2>
+      <h1 id="cuatro">404</h1>
+      <p>lo sentimos no podemos encontrar la pagina</p>
+      <a class="btn boton-404 m-3" href="../index.html" role="button"
+        >VOLVER A LA PAGINA PRINCIPAL</a
+      >
+    </main>
+  </body>
+</html>
