--- a/pages/galeria.html
+++ b/pages/galeria.html
@@ -52,52 +52,52 @@
 <main  id="main"  data-aos="zoom-in-up">
  <h1 class="text-center">GALERIA </h1>
   <div >
-   
+
     <div id="carouselExampleControls" class="carousel slide borde__blanco animacion__tour ani_tour" data-bs-ride="carousel">
 
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img src="../img/galmm/z.jpg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 1">
+          <img src="../img/galmm/z.jpg" class="d-block w-100" alt="imagen de marilyn manson cara blanca bien de frente">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/x.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 2">
+          <img src="../img/galmm/x.jpeg" class="d-block w-100" alt="imagen de marilyn manson con unn saco y la cara con vendas">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/c.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 3">
+          <img src="../img/galmm/c.jpeg" class="d-block w-100" alt="imagen de marilyn manson con las manos arriba y pelo largo">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/d.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 4">
+          <img src="../img/galmm/d.jpeg" class="d-block w-100" alt="imagen de marilyn manson con un casquito">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/e.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 5">
+          <img src="../img/galmm/e.jpeg" class="d-block w-100" alt="imagen de marilyn manson con microfono mirando para arriba">
         </div>
         
         <div class="carousel-item">
-          <img src="../img/galmm/h.png" class="d-block w-100" alt="imagen de marilyn manson en carrusel 6">
+          <img src="../img/galmm/h.png" class="d-block w-100" alt="imagen de marilyn manson pintado de negro mirandose al espejo">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/i.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 7">
+          <img src="../img/galmm/i.jpeg" class="d-block w-100" alt="imagen de marilyn manson cantando con un casquito y abriendo la boca">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/k.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 9">
+          <img src="../img/galmm/k.jpeg" class="d-block w-100" alt="imagen de marilyn manson apoyado en una pared azul ">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/l.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 10">
+          <img src="../img/galmm/l.jpeg" class="d-block w-100" alt="imagen de marilyn manson mirando de frente todo gris">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/m.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 11">
+          <img src="../img/galmm/m.jpeg" class="d-block w-100" alt=" imagen de marilyn manson con galera sacando la lengua para el costado">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/n.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 12">
+          <img src="../img/galmm/n.jpeg" class="d-block w-100" alt="imagen de marilyn manson de frente todo gris">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/o.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 13">
+          <img src="../img/galmm/o.jpeg" class="d-block w-100" alt="imagen de marilyn manson con galera de frente posando">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/p.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 14">
+          <img src="../img/galmm/p.jpeg" class="d-block w-100" alt="imagen de marilyn manson en un sillon rojo con la mano enm la cabeza como preocupado">
         </div>
         <div class="carousel-item">
-          <img src="../img/galmm/s.jpeg" class="d-block w-100" alt="imagen de marilyn manson en carrusel 16">
+          <img src="../img/galmm/s.jpeg" class="d-block w-100" alt="imagen de marilyn manson con gorro ruso mirando para arriba con la mano en la boca">
         </div>
       </div>
       <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
