--- a/pages/error404.html
+++ b/pages/error404.html
@@ -22,15 +22,19 @@
     <title>M M Fanspage Error 404</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
   </head>
+<body id="body404">
+    <div class="main-container">
+        <div class="img-container container-item">
+            <img class="w-100" src="../img/hh.jpg">
+        </div>
 
-  <body class="body404">
-    <main class="container404">
-      <h2>ERROR</h2>
-      <h1 id="cuatro">404</h1>
-      <p>lo sentimos no podemos encontrar la pagina</p>
-      <a class="btn boton-404 m-3" href="../index.html" role="button"
-        >VOLVER A LA PAGINA PRINCIPAL</a
-      >
+        <div class="text-container container-item">
+            <div class="code">404</div>
+            <div class="msg"> PAGINA NO ENCONTRADA </div>
+            <a class="action" href="../index.html"> <div> VOLVER A LA PAGINA DE INICIO PARA VER MAS CONTENIDO </div> </a>
+        </div>
+    </div>
+
     </main>
   </body>
 </html>
