--- a/pages/error404.html
+++ b/pages/error404.html
@@ -22,10 +22,10 @@
     <title>M M Fanspage Error 404</title>
     <link rel="stylesheet" type="text/css" href="../css/style.css" />
   </head>
-<body id="body404">
+<body id="body404" >
     <div class="main-container">
         <div class="img-container container-item">
-            <img class="w-100" src="../img/hh.jpg">
+            <img class="w-100 " src="../img/error.jpg">
         </div>
 
         <div class="text-container container-item">
